Fix image size issue on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ nav .logo{
 #game-modes img{
     margin-top: 15px;
     margin-bottom: 15px;
-    width: 700px;
+    width: 100%;
     height: 350px;
     
     
@@ -95,3 +95,4 @@ font-family: var(--secondary-font);
     margin-right: 15px;
     font-family: var(--primary-font);
 }
+
